Some minor UI tweaks, fixed the bug with instructions not showing numbers

--- a/find-my-recipe/src/pages/Home.css
+++ b/find-my-recipe/src/pages/Home.css
@@ -365,3 +365,7 @@ select{
     max-height: 20vh;
     overflow-y: auto;
 }
+
+.UnitText{
+    margin: 0;
+}
